update movie schema and add Cloudinary upload configuration

--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
     "start": "node server.js"
   },
   "dependencies": {
+    "cloudinary": "^2.8.0",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
-    "mongoose": "^8.19.2"
+    "mongoose": "^8.19.2",
+    "multer": "^2.0.2",
+    "streamifier": "^0.1.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
