--- a/package.json
+++ b/package.json
@@ -11,13 +11,15 @@
     "start": "cross-env NODE_ENV=production node server.js"
   },
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "cloudinary": "^2.8.0",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "mongoose": "^8.19.2",
     "multer": "^2.0.2",
     "qs": "^6.14.0",
-    "streamifier": "^0.1.1"
+    "streamifier": "^0.1.1",
+    "validator": "^13.15.20"
   },
   "devDependencies": {
     "cross-env": "^10.1.0",
